namespace Game.Values.AnimationParameters
{
    class Player
    {
        public const string VelocityY = "VelocityY";
        public const string Speed = "Speed";
        public const string Grounded = "Grounded";
        public const string Jump = "Jump";
        public const string Attack = "Attack";
        public const string Dash = "Dash";
        public const string DashEnd = "DashEnd";
    }
}
